--- a/3WeekProject/3WeekProject.runs/impl_1/usage_statistics_webtalk.html
+++ b/3WeekProject/3WeekProject.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2258646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Jun 11 10:01:32 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Jun 11 12:16:37 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>d25471fdf6904149b516352dd7967181</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>7</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>9</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>98f8de034ff95f5dba45fe42613d6c88</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>98f8de034ff95f5dba45fe42613d6c88</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -34,81 +34,85 @@
 <TR ALIGN='LEFT'>   <TD>abstractsearchablepanel_show_search=2</TD>
    <TD>basedialog_cancel=1</TD>
    <TD>basedialog_close=1</TD>
-   <TD>basedialog_ok=93</TD>
+   <TD>basedialog_ok=114</TD>
 </TR><TR ALIGN='LEFT'>   <TD>boardchooser_board_table=1</TD>
    <TD>closeplanner_no=1</TD>
    <TD>cmdmsgdialog_ok=1</TD>
    <TD>confirmsavetexteditsdialog_no=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=2</TD>
-   <TD>createsrcfiledialog_file_name=4</TD>
-   <TD>createsrcfiledialog_file_type=4</TD>
+   <TD>createsrcfiledialog_file_name=5</TD>
+   <TD>createsrcfiledialog_file_type=5</TD>
    <TD>expruntreepanel_exp_run_tree_table=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=154</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=170</TD>
    <TD>filesetpanel_messages=3</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=63</TD>
-   <TD>gettingstartedview_create_new_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>hcodeeditor_blank_operations=2</TD>
+   <TD>filtertoolbar_show_all=1</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=74</TD>
+</TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_create_new_project=1</TD>
+   <TD>hcodeeditor_blank_operations=2</TD>
    <TD>hcodeeditor_diff_with=1</TD>
-   <TD>hinputhandler_toggle_line_comments=5</TD>
-   <TD>languagetemplatesdialog_templates_tree=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_checkpoint=1</TD>
+   <TD>hinputhandler_toggle_line_comments=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>languagetemplatesdialog_templates_tree=9</TD>
+   <TD>mainmenumgr_checkpoint=1</TD>
    <TD>mainmenumgr_edit=10</TD>
    <TD>mainmenumgr_file=12</TD>
-   <TD>mainmenumgr_flow=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_ip=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_flow=5</TD>
+   <TD>mainmenumgr_ip=1</TD>
    <TD>mainmenumgr_open_recent_project=3</TD>
    <TD>mainmenumgr_project=6</TD>
-   <TD>mainmenumgr_reports=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_tools=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_reports=6</TD>
+   <TD>mainmenumgr_tools=8</TD>
    <TD>mainmenumgr_view=4</TD>
    <TD>mainmenumgr_window=8</TD>
-   <TD>maintoolbarmgr_open=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainwinmenumgr_layout=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>maintoolbarmgr_open=1</TD>
+   <TD>mainwinmenumgr_layout=6</TD>
    <TD>mainwinmenumgr_load=1</TD>
    <TD>messagewithoptiondialog_dont_show_this_dialog_again=1</TD>
-   <TD>msgtreepanel_message_view_tree=96</TD>
-</TR><TR ALIGN='LEFT'>   <TD>netlisttreeview_netlist_tree=4</TD>
-   <TD>openfileaction_cancel=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=104</TD>
+   <TD>msgview_information_messages=1</TD>
+   <TD>msgview_warning_messages=2</TD>
+   <TD>netlisttreeview_netlist_tree=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openfileaction_cancel=2</TD>
    <TD>openfileaction_open_directory=1</TD>
-   <TD>pacommandnames_add_sources=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=5</TD>
-   <TD>pacommandnames_fileset_window=1</TD>
+   <TD>pacommandnames_add_sources=11</TD>
+   <TD>pacommandnames_auto_update_hier=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_fileset_window=1</TD>
    <TD>pacommandnames_language_templates=1</TD>
-   <TD>paviews_code=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_device=60</TD>
-   <TD>paviews_project_summary=6</TD>
+   <TD>paviews_code=12</TD>
+   <TD>paviews_device=60</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=7</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
    <TD>projectnamechooser_project_name=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectsummaryutilizationgadget_project_summary_utilization_gadget_tabbed=2</TD>
-   <TD>projecttab_close_design=3</TD>
+   <TD>projectsummaryutilizationgadget_project_summary_utilization_gadget_tabbed=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projecttab_close_design=4</TD>
    <TD>rdicommands_custom_commands=2</TD>
-   <TD>rdicommands_delete=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_properties=2</TD>
-   <TD>reportutiltab_report_utilization_navigation_tree=8</TD>
-   <TD>saveprojectutils_save=12</TD>
+   <TD>rdicommands_delete=2</TD>
+   <TD>rdicommands_properties=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>reportutiltab_report_utilization_navigation_tree=8</TD>
+   <TD>saveprojectutils_save=14</TD>
    <TD>selectmenu_highlight=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
-   <TD>srcchooserpanel_create_file=4</TD>
-   <TD>srcmenu_ip_hierarchy=6</TD>
+   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_create_file=5</TD>
+   <TD>srcchooserpanel_make_local_copy_of_these_files_into=2</TD>
+   <TD>srcmenu_ip_hierarchy=7</TD>
    <TD>srcmenu_open_selected_source_files=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=6</TD>
    <TD>syntheticastatemonitor_cancel=1</TD>
    <TD>utilizationhierviewtreetablepanel_table(hierarchy)=2</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=10</TD>
-   <TD>editdelete=1</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=12</TD>
+   <TD>editdelete=2</TD>
    <TD>editproperties=2</TD>
    <TD>newproject=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>openfile=1</TD>
    <TD>openhardwaremanager=1</TD>
    <TD>reportutilization=3</TD>
-   <TD>runbitgen=26</TD>
+   <TD>runbitgen=36</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runimplementation=17</TD>
    <TD>runsynthesis=2</TD>
    <TD>savefileproxyhandler=4</TD>
-   <TD>showview=34</TD>
+   <TD>showview=42</TD>
 </TR><TR ALIGN='LEFT'>   <TD>toolstemplates=1</TD>
    <TD>viewlayoutcmd=1</TD>
    <TD>viewtaskimplementation=2</TD>
@@ -117,7 +121,7 @@
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=9</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=10</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -338,7 +342,7 @@
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>package=clg400</TD>
-    <TD>pct_clock_constrained=3.000000</TD>
+    <TD>pct_clock_constrained=4.000000</TD>
     <TD>pct_inputs_defined=11</TD>
     <TD>platform=nt64</TD>
 </TR><TR ALIGN='LEFT'>    <TD>pll=0.106404</TD>
@@ -779,8 +783,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:26s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=521.590MB</TD>
-    <TD>memory_peak=756.332MB</TD>
+    <TD>memory_gain=522.402MB</TD>
+    <TD>memory_peak=756.906MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
